test/errors/type/str/search3.yasl
mt.lookup('', .search)(.str, true)
